Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/modules/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> statement_list
Rule 3     statement_list -> statement statement_list
Rule 4     statement_list -> empty
Rule 5     statement -> expression SEMICOLON
Rule 6     statement -> variable_declaration SEMICOLON
Rule 7     statement -> variable_assignment SEMICOLON
Rule 8     statement -> type_declaration SEMICOLON
Rule 9     statement -> function_declaration
Rule 10    statement -> if_statement
Rule 11    statement -> while_statement
Rule 12    expression -> L_PARENTHESIS expression R_PARENTHESIS
Rule 13    expression -> binary_expression
Rule 14    expression -> unary_expression
Rule 15    expression -> value
Rule 16    binary_expression -> expression PLUS expression
Rule 17    binary_expression -> expression MINUS expression
Rule 18    binary_expression -> expression MULTIPLY expression
Rule 19    binary_expression -> expression DIVIDE expression
Rule 20    binary_expression -> expression AND expression
Rule 21    binary_expression -> expression OR expression
Rule 22    binary_expression -> expression EQUALS expression
Rule 23    binary_expression -> expression GREATER_THAN expression
Rule 24    binary_expression -> expression LESS_THAN expression
Rule 25    binary_expression -> expression GREATER_EQUAL expression
Rule 26    binary_expression -> expression LESS_EQUAL expression
Rule 27    unary_expression -> unary_operator L_PARENTHESIS expression R_PARENTHESIS
Rule 28    unary_expression -> unary_operator value
Rule 29    unary_operator -> MINUS
Rule 30    unary_operator -> NOT
Rule 31    unary_operator -> PLUS
Rule 32    value -> NUMBER_VALUE
Rule 33    value -> CHAR_VALUE
Rule 34    value -> BOOL_VALUE
Rule 35    value -> ID
Rule 36    value -> NULL
Rule 37    value -> ID L_PARENTHESIS argument_list R_PARENTHESIS
Rule 38    value -> ID DOT ID recursive_atribute_access
Rule 39    value -> ID L_SQ_BRACKET QUOTED_ID R_SQ_BRACKET recursive_atribute_access
Rule 40    argument_list -> expression
Rule 41    argument_list -> expression COMMA argument_list
Rule 42    argument_list -> empty
Rule 43    atribute_access -> ID recursive_atribute_access
Rule 44    recursive_atribute_access -> DOT ID recursive_atribute_access
Rule 45    recursive_atribute_access -> L_SQ_BRACKET QUOTED_ID R_SQ_BRACKET recursive_atribute_access
Rule 46    recursive_atribute_access -> empty
Rule 47    variable_declaration -> LET ID recursive_variable_declaration
Rule 48    variable_declaration -> LET ID TWO_POINTS ID recursive_variable_declaration
Rule 49    variable_declaration -> LET ID TWO_POINTS type recursive_variable_declaration
Rule 50    recursive_variable_declaration -> COMMA ID recursive_variable_declaration
Rule 51    recursive_variable_declaration -> COMMA ID TWO_POINTS ID recursive_variable_declaration
Rule 52    recursive_variable_declaration -> empty
Rule 53    variable_assignment -> basic_var_assignment
Rule 54    variable_assignment -> object_var_assignment
Rule 55    basic_var_assignment -> ID ASSIGN expression
Rule 56    basic_var_assignment -> variable_declaration ASSIGN expression
Rule 57    object_var_assignment -> variable_declaration ASSIGN object_body
Rule 58    object_var_assignment -> ID ASSIGN object_body
Rule 59    object_var_assignment -> atribute_access ASSIGN expression
Rule 60    object_var_assignment -> atribute_access ASSIGN object_body
Rule 61    object_body -> L_BRACKET object_body_content R_BRACKET
Rule 62    object_body_content -> ID TWO_POINTS expression recursive_obejct_body_content
Rule 63    object_body_content -> QUOTED_ID TWO_POINTS expression recursive_obejct_body_content
Rule 64    object_body_content -> ID TWO_POINTS object_body recursive_obejct_body_content
Rule 65    object_body_content -> QUOTED_ID TWO_POINTS object_body recursive_obejct_body_content
Rule 66    recursive_obejct_body_content -> COMMA ID TWO_POINTS expression recursive_obejct_body_content
Rule 67    recursive_obejct_body_content -> COMMA QUOTED_ID TWO_POINTS expression recursive_obejct_body_content
Rule 68    recursive_obejct_body_content -> COMMA ID TWO_POINTS object_body recursive_obejct_body_content
Rule 69    recursive_obejct_body_content -> COMMA QUOTED_ID TWO_POINTS object_body recursive_obejct_body_content
Rule 70    recursive_obejct_body_content -> empty
Rule 71    recursive_obejct_body_content -> COMMA empty
Rule 72    type_declaration -> TYPE ID ASSIGN type_body
Rule 73    type_body -> L_BRACKET type_body_content R_BRACKET
Rule 74    type_body_content -> ID TWO_POINTS type type_body_content_recursive
Rule 75    type_body_content -> QUOTED_ID TWO_POINTS type type_body_content_recursive
Rule 76    type_body_content -> ID TWO_POINTS ID type_body_content_recursive
Rule 77    type_body_content -> QUOTED_ID TWO_POINTS ID type_body_content_recursive
Rule 78    type_body_content -> ID TWO_POINTS type_body type_body_content_recursive
Rule 79    type_body_content -> QUOTED_ID TWO_POINTS type_body type_body_content_recursive
Rule 80    type_body_content_recursive -> COMMA ID TWO_POINTS type type_body_content_recursive
Rule 81    type_body_content_recursive -> COMMA QUOTED_ID TWO_POINTS type type_body_content_recursive
Rule 82    type_body_content_recursive -> COMMA ID TWO_POINTS ID type_body_content_recursive
Rule 83    type_body_content_recursive -> COMMA QUOTED_ID TWO_POINTS ID type_body_content_recursive
Rule 84    type_body_content_recursive -> COMMA ID TWO_POINTS type_body type_body_content_recursive
Rule 85    type_body_content_recursive -> COMMA QUOTED_ID TWO_POINTS type_body type_body_content_recursive
Rule 86    type_body_content_recursive -> empty
Rule 87    type_body_content_recursive -> COMMA empty
Rule 88    type -> INT
Rule 89    type -> FLOAT
Rule 90    type -> CHARACTER
Rule 91    type -> BOOLEAN
Rule 92    function_declaration -> function_header function_body
Rule 93    function_header -> FUNCTION ID L_PARENTHESIS function_params R_PARENTHESIS TWO_POINTS return_type
Rule 94    function_body -> L_BRACKET statement_list RETURN return_statement R_BRACKET
Rule 95    function_params -> ID TWO_POINTS type COMMA function_params
Rule 96    function_params -> ID TWO_POINTS type
Rule 97    function_params -> ID TWO_POINTS ID COMMA function_params
Rule 98    function_params -> ID TWO_POINTS ID
Rule 99    function_params -> empty
Rule 100   return_type -> type
Rule 101   return_type -> ID
Rule 102   return_statement -> expression SEMICOLON
Rule 103   return_statement -> object_body SEMICOLON
Rule 104   if_statement -> IF if_evaluation if_statements else_statement
Rule 105   if_evaluation -> L_PARENTHESIS expression R_PARENTHESIS
Rule 106   if_statements -> L_BRACKET statement statement_list R_BRACKET
Rule 107   else_statement -> ELSE L_BRACKET statement statement_list R_BRACKET
Rule 108   else_statement -> empty
Rule 109   while_statement -> while_header while_statements
Rule 110   while_header -> WHILE L_PARENTHESIS expression R_PARENTHESIS
Rule 111   while_statements -> L_BRACKET statement statement_list R_BRACKET

Terminals, with rules where they appear

AND                  : 20
ASSIGN               : 55 56 57 58 59 60 72
BOOLEAN              : 91
BOOL_VALUE           : 34
CHARACTER            : 90
CHAR_VALUE           : 33
COMMA                : 41 50 51 66 67 68 69 71 80 81 82 83 84 85 87 95 97
DIVIDE               : 19
DOT                  : 38 44
ELSE                 : 107
EQUALS               : 22
FLOAT                : 89
FUNCTION             : 93
GREATER_EQUAL        : 25
GREATER_THAN         : 23
ID                   : 35 37 38 38 39 43 44 47 48 48 49 50 51 51 55 58 62 64 66 68 72 74 76 76 77 78 80 82 82 83 84 93 95 96 97 97 98 98 101
IF                   : 104
INT                  : 88
LESS_EQUAL           : 26
LESS_THAN            : 24
LET                  : 47 48 49
L_BRACKET            : 61 73 94 106 107 111
L_PARENTHESIS        : 12 27 37 93 105 110
L_SQ_BRACKET         : 39 45
MINUS                : 17 29
MULTIPLY             : 18
NOT                  : 30
NULL                 : 36
NUMBER_VALUE         : 32
OR                   : 21
PLUS                 : 16 31
QUOTED_ID            : 39 45 63 65 67 69 75 77 79 81 83 85
RETURN               : 94
R_BRACKET            : 61 73 94 106 107 111
R_PARENTHESIS        : 12 27 37 93 105 110
R_SQ_BRACKET         : 39 45
SEMICOLON            : 5 6 7 8 102 103
TWO_POINTS           : 48 49 51 62 63 64 65 66 67 68 69 74 75 76 77 78 79 80 81 82 83 84 85 93 95 96 97 98
TYPE                 : 72
WHILE                : 110
error                : 

Nonterminals, with rules where they appear

argument_list        : 37 41
atribute_access      : 59 60
basic_var_assignment : 53
binary_expression    : 13
else_statement       : 104
empty                : 4 42 46 52 70 71 86 87 99 108
expression           : 5 12 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 40 41 55 56 59 62 63 66 67 102 105 110
function_body        : 92
function_declaration : 9
function_header      : 92
function_params      : 93 95 97
if_evaluation        : 104
if_statement         : 10
if_statements        : 104
object_body          : 57 58 60 64 65 68 69 103
object_body_content  : 61
object_var_assignment : 54
program              : 0
recursive_atribute_access : 38 39 43 44 45
recursive_obejct_body_content : 62 63 64 65 66 67 68 69
recursive_variable_declaration : 47 48 49 50 51
return_statement     : 94
return_type          : 93
statement            : 3 106 107 111
statement_list       : 2 3 94 106 107 111
type                 : 49 74 75 80 81 95 96 100
type_body            : 72 78 79 84 85
type_body_content    : 73
type_body_content_recursive : 74 75 76 77 78 79 80 81 82 83 84 85
type_declaration     : 8
unary_expression     : 14
unary_operator       : 27 28
value                : 15 28
variable_assignment  : 7
variable_declaration : 6 56 57
while_header         : 109
while_statement      : 11
while_statements     : 109

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . statement_list
    (3) statement_list -> . statement statement_list
    (4) statement_list -> . empty
    (5) statement -> . expression SEMICOLON
    (6) statement -> . variable_declaration SEMICOLON
    (7) statement -> . variable_assignment SEMICOLON
    (8) statement -> . type_declaration SEMICOLON
    (9) statement -> . function_declaration
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (1) empty -> .
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . binary_expression
    (14) expression -> . unary_expression
    (15) expression -> . value
    (47) variable_declaration -> . LET ID recursive_variable_declaration
    (48) variable_declaration -> . LET ID TWO_POINTS ID recursive_variable_declaration
    (49) variable_declaration -> . LET ID TWO_POINTS type recursive_variable_declaration
    (53) variable_assignment -> . basic_var_assignment
    (54) variable_assignment -> . object_var_assignment
    (72) type_declaration -> . TYPE ID ASSIGN type_body
    (92) function_declaration -> . function_header function_body
    (104) if_statement -> . IF if_evaluation if_statements else_statement
    (109) while_statement -> . while_header while_statements
    (16) binary_expression -> . expression PLUS expression
    (17) binary_expression -> . expression MINUS expression
    (18) binary_expression -> . expression MULTIPLY expression
    (19) binary_expression -> . expression DIVIDE expression
    (20) binary_expression -> . expression AND expression
    (21) binary_expression -> . expression OR expression
    (22) binary_expression -> . expression EQUALS expression
    (23) binary_expression -> . expression GREATER_THAN expression
    (24) binary_expression -> . expression LESS_THAN expression
    (25) binary_expression -> . expression GREATER_EQUAL expression
    (26) binary_expression -> . expression LESS_EQUAL expression
    (27) unary_expression -> . unary_operator L_PARENTHESIS expression R_PARENTHESIS
    (28) unary_expression -> . unary_operator value
    (32) value -> . NUMBER_VALUE
    (33) value -> . CHAR_VALUE
    (34) value -> . BOOL_VALUE
    (35) value -> . ID
    (36) value -> . NULL
    (37) value -> . ID L_PARENTHESIS argument_list R_PARENTHESIS
    (38) value -> . ID DOT ID recursive_atribute_access
    (39) value -> . ID L_SQ_BRACKET QUOTED_ID R_SQ_BRACKET recursive_atribute_access
    (55) basic_var_assignment -> . ID ASSIGN expression
    (56) basic_var_assignment -> . variable_declaration ASSIGN expression
    (57) object_var_assignment -> . variable_declaration ASSIGN object_body
    (58) object_var_assignment -> . ID ASSIGN object_body
    (59) object_var_assignment -> . atribute_access ASSIGN expression
    (60) object_var_assignment -> . atribute_access ASSIGN object_body
    (93) function_header -> . FUNCTION ID L_PARENTHESIS function_params R_PARENTHESIS TWO_POINTS return_type
    (110) while_header -> . WHILE L_PARENTHESIS expression R_PARENTHESIS
    (29) unary_operator -> . MINUS
    (30) unary_operator -> . NOT
    (31) unary_operator -> . PLUS
    (43) atribute_access -> . ID recursive_atribute_access

    $end            reduce using rule 1 (empty -> .)
    L_PARENTHESIS   shift and go to state 12
    LET             shift and go to state 16
    TYPE            shift and go to state 20
    IF              shift and go to state 22
    NUMBER_VALUE    shift and go to state 27
    CHAR_VALUE      shift and go to state 28
    BOOL_VALUE      shift and go to state 29
    ID              shift and go to state 17
    NULL            shift and go to state 30
    FUNCTION        shift and go to state 32
    WHILE           shift and go to state 33
    MINUS           shift and go to state 25
    NOT             shift and go to state 34
    PLUS            shift and go to state 24

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    expression                     shift and go to state 5
    variable_declaration           shift and go to state 6
    variable_assignment            shift and go to state 7
    type_declaration               shift and go to state 8
    function_declaration           shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    binary_expression              shift and go to state 13
    unary_expression               shift and go to state 14
    value                          shift and go to state 15
    basic_var_assignment           shift and go to state 18
    object_var_assignment          shift and go to state 19
    function_header                shift and go to state 21
    while_header                   shift and go to state 23
    unary_operator                 shift and go to state 26
    atribute_access                shift and go to state 31

state 1

    (0) S' -> program .



state 2

    (2) program -> statement_list .

    $end            reduce using rule 2 (program -> statement_list .)


state 3

    (3) statement_list -> statement . statement_list
    (3) statement_list -> . statement statement_list
    (4) statement_list -> . empty
    (5) statement -> . expression SEMICOLON
    (6) statement -> . variable_declaration SEMICOLON
    (7) statement -> . variable_assignment SEMICOLON
    (8) statement -> . type_declaration SEMICOLON
    (9) statement -> . function_declaration
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (1) empty -> .
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . binary_expression
    (14) expression -> . unary_expression
    (15) expression -> . value
    (47) variable_declaration -> . LET ID recursive_variable_declaration
    (48) variable_declaration -> . LET ID TWO_POINTS ID recursive_variable_declaration
    (49) variable_declaration -> . LET ID TWO_POINTS type recursive_variable_declaration
    (53) variable_assignment -> . basic_var_assignment
    (54) variable_assignment -> . object_var_assignment
    (72) type_declaration -> . TYPE ID ASSIGN type_body
    (92) function_declaration -> . function_header function_body
    (104) if_statement -> . IF if_evaluation if_statements else_statement
    (109) while_statement -> . while_header while_statements
    (16) binary_expression -> . expression PLUS expression
    (17) binary_expression -> . expression MINUS expression
    (18) binary_expression -> . expression MULTIPLY expression
    (19) binary_expression -> . expression DIVIDE expression
    (20) binary_expression -> . expression AND expression
    (21) binary_expression -> . expression OR expression
    (22) binary_expression -> . expression EQUALS expression
    (23) binary_expression -> . expression GREATER_THAN expression
    (24) binary_expression -> . expression LESS_THAN expression
    (25) binary_expression -> . expression GREATER_EQUAL expression
    (26) binary_expression -> . expression LESS_EQUAL expression
    (27) unary_expression -> . unary_operator L_PARENTHESIS expression R_PARENTHESIS
    (28) unary_expression -> . unary_operator value
    (32) value -> . NUMBER_VALUE
    (33) value -> . CHAR_VALUE
    (34) value -> . BOOL_VALUE
    (35) value -> . ID
    (36) value -> . NULL
    (37) value -> . ID L_PARENTHESIS argument_list R_PARENTHESIS
    (38) value -> . ID DOT ID recursive_atribute_access
    (39) value -> . ID L_SQ_BRACKET QUOTED_ID R_SQ_BRACKET recursive_atribute_access
    (55) basic_var_assignment -> . ID ASSIGN expression
    (56) basic_var_assignment -> . variable_declaration ASSIGN expression
    (57) object_var_assignment -> . variable_declaration ASSIGN object_body
    (58) object_var_assignment -> . ID ASSIGN object_body
    (59) object_var_assignment -> . atribute_access ASSIGN expression
    (60) object_var_assignment -> . atribute_access ASSIGN object_body
    (93) function_header -> . FUNCTION ID L_PARENTHESIS function_params R_PARENTHESIS TWO_POINTS return_type
    (110) while_header -> . WHILE L_PARENTHESIS expression R_PARENTHESIS
    (29) unary_operator -> . MINUS
    (30) unary_operator -> . NOT
    (31) unary_operator -> . PLUS
    (43) atribute_access -> . ID recursive_atribute_access

    $end            reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    R_BRACKET       reduce using rule 1 (empty -> .)
    L_PARENTHESIS   shift and go to state 12
    LET             shift and go to state 16
    TYPE            shift and go to state 20
    IF              shift and go to state 22
    NUMBER_VALUE    shift and go to state 27
    CHAR_VALUE      shift and go to state 28
    BOOL_VALUE      shift and go to state 29
    ID              shift and go to state 17
    NULL            shift and go to state 30
    FUNCTION        shift and go to state 32
    WHILE           shift and go to state 33
    MINUS           shift and go to state 25
    NOT             shift and go to state 34
    PLUS            shift and go to state 24

    statement                      shift and go to state 3
    statement_list                 shift and go to state 35
    empty                          shift and go to state 4
    expression                     shift and go to state 5
    variable_declaration           shift and go to state 6
    variable_assignment            shift and go to state 7
    type_declaration               shift and go to state 8
    function_declaration           shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    binary_expression              shift and go to state 13
    unary_expression               shift and go to state 14
    value                          shift and go to state 15
    basic_var_assignment           shift and go to state 18
    object_var_assignment          shift and go to state 19
    function_header                shift and go to state 21
    while_header                   shift and go to state 23
    unary_operator                 shift and go to state 26
    atribute_access                shift and go to state 31

state 4

    (4) statement_list -> empty .

    $end            reduce using rule 4 (statement_list -> empty .)
    RETURN          reduce using rule 4 (statement_list -> empty .)
    R_BRACKET       reduce using rule 4 (statement_list -> empty .)


state 5

    (5) statement -> expression . SEMICOLON
    (16) binary_expression -> expression . PLUS expression
    (17) binary_expression -> expression . MINUS expression
    (18) binary_expression -> expression . MULTIPLY expression
    (19) binary_expression -> expression . DIVIDE expression
    (20) binary_expression -> expression . AND expression
    (21) binary_expression -> expression . OR expression
    (22) binary_expression -> expression . EQUALS expression
    (23) binary_expression -> expression . GREATER_THAN expression
    (24) binary_expression -> expression . LESS_THAN expression
    (25) binary_expression -> expression . GREATER_EQUAL expression
    (26) binary_expression -> expression . LESS_EQUAL expression

    SEMICOLON       shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MULTIPLY        shift and go to state 39
    DIVIDE          shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42
    EQUALS          shift and go to state 43
    GREATER_THAN    shift and go to state 44
    LESS_THAN       shift and go to state 45
    GREATER_EQUAL   shift and go to state 46
    LESS_EQUAL      shift and go to state 47


state 6

    (6) statement -> variable_declaration . SEMICOLON
    (56) basic_var_assignment -> variable_declaration . ASSIGN expression
    (57) object_var_assignment -> variable_declaration . ASSIGN object_body

    SEMICOLON       shift and go to state 48
    ASSIGN          shift and go to state 49


state 7

    (7) statement -> variable_assignment . SEMICOLON

    SEMICOLON       shift and go to state 50


state 8

    (8) statement -> type_declaration . SEMICOLON

    SEMICOLON       shift and go to state 51


state 9

    (9) statement -> function_declaration .

    L_PARENTHESIS   reduce using rule 9 (statement -> function_declaration .)
    LET             reduce using rule 9 (statement -> function_declaration .)
    TYPE            reduce using rule 9 (statement -> function_declaration .)
    IF              reduce using rule 9 (statement -> function_declaration .)
    NUMBER_VALUE    reduce using rule 9 (statement -> function_declaration .)
    CHAR_VALUE      reduce using rule 9 (statement -> function_declaration .)
    BOOL_VALUE      reduce using rule 9 (statement -> function_declaration .)
    ID              reduce using rule 9 (statement -> function_declaration .)
    NULL            reduce using rule 9 (statement -> function_declaration .)
    FUNCTION        reduce using rule 9 (statement -> function_declaration .)
    WHILE           reduce using rule 9 (statement -> function_declaration .)
    MINUS           reduce using rule 9 (statement -> function_declaration .)
    NOT             reduce using rule 9 (statement -> function_declaration .)
    PLUS            reduce using rule 9 (statement -> function_declaration .)
    $end            reduce using rule 9 (statement -> function_declaration .)
    RETURN          reduce using rule 9 (statement -> function_declaration .)
    R_BRACKET       reduce using rule 9 (statement -> function_declaration .)


state 10

    (10) statement -> if_statement .

    L_PARENTHESIS   reduce using rule 10 (statement -> if_statement .)
    LET             reduce using rule 10 (statement -> if_statement .)
    TYPE            reduce using rule 10 (statement -> if_statement .)
    IF              reduce using rule 10 (statement -> if_statement .)
    NUMBER_VALUE    reduce using rule 10 (statement -> if_statement .)
    CHAR_VALUE      reduce using rule 10 (statement -> if_statement .)
    BOOL_VALUE      reduce using rule 10 (statement -> if_statement .)
    ID              reduce using rule 10 (statement -> if_statement .)
    NULL            reduce using rule 10 (statement -> if_statement .)
    FUNCTION        reduce using rule 10 (statement -> if_statement .)
    WHILE           reduce using rule 10 (statement -> if_statement .)
    MINUS           reduce using rule 10 (statement -> if_statement .)
    NOT             reduce using rule 10 (statement -> if_statement .)
    PLUS            reduce using rule 10 (statement -> if_statement .)
    $end            reduce using rule 10 (statement -> if_statement .)
    RETURN          reduce using rule 10 (statement -> if_statement .)
    R_BRACKET       reduce using rule 10 (statement -> if_statement .)


state 11

    (11) statement -> while_statement .

    L_PARENTHESIS   reduce using rule 11 (statement -> while_statement .)
    LET             reduce using rule 11 (statement -> while_statement .)
    TYPE            reduce using rule 11 (statement -> while_statement .)
    IF              reduce using rule 11 (statement -> while_statement .)
    NUMBER_VALUE    reduce using rule 11 (statement -> while_statement .)
    CHAR_VALUE      reduce using rule 11 (statement -> while_statement .)
    BOOL_VALUE      reduce using rule 11 (statement -> while_statement .)
    ID              reduce using rule 11 (statement -> while_statement .)
    NULL            reduce using rule 11 (statement -> while_statement .)
    FUNCTION        reduce using rule 11 (statement -> while_statement .)
    WHILE           reduce using rule 11 (statement -> while_statement .)
    MINUS           reduce using rule 11 (statement -> while_statement .)
    NOT             reduce using rule 11 (statement -> while_statement .)
    PLUS            reduce using rule 11 (statement -> while_statement .)
    $end            reduce using rule 11 (statement -> while_statement .)
    RETURN          reduce using rule 11 (statement -> while_statement .)
    R_BRACKET       reduce using rule 11 (statement -> while_statement .)


state 12

    (12) expression -> L_PARENTHESIS . expression R_PARENTHESIS
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . binary_expression
    (14) expression -> . unary_expression
    (15) expression -> . value
    (16) binary_expression -> . expression PLUS expression
    (17) binary_expression -> . expression MINUS expression
    (18) binary_expression -> . expression MULTIPLY expression
    (19) binary_expression -> . expression DIVIDE expression
    (20) binary_expression -> . expression AND expression
    (21) binary_expression -> . expression OR expression
    (22) binary_expression -> . expression EQUALS expression
    (23) binary_expression -> . expression GREATER_THAN expression
    (24) binary_expression -> . expression LESS_THAN expression
    (25) binary_expression -> . expression GREATER_EQUAL expression
    (26) binary_expression -> . expression LESS_EQUAL expression
    (27) unary_expression -> . unary_operator L_PARENTHESIS expression R_PARENTHESIS
    (28) unary_expression -> . unary_operator value
    (32) value -> . NUMBER_VALUE
    (33) value -> . CHAR_VALUE
    (34) value -> . BOOL_VALUE
    (35) value -> . ID
    (36) value -> . NULL
    (37) value -> . ID L_PARENTHESIS argument_list R_PARENTHESIS
    (38) value -> . ID DOT ID recursive_atribute_access
    (39) value -> . ID L_SQ_BRACKET QUOTED_ID R_SQ_BRACKET recursive_atribute_access
    (29) unary_operator -> . MINUS
    (30) unary_operator -> . NOT
    (31) unary_operator -> . PLUS

    L_PARENTHESIS   shift and go to state 12
    NUMBER_VALUE    shift and go to state 27
    CHAR_VALUE      shift and go to state 28
    BOOL_VALUE      shift and go to state 29
    ID              shift and go to state 53
    NULL            shift and go to state 30
    MINUS           shift and go to state 25
    NOT             shift and go to state 34
    PLUS            shift and go to state 24

    expression                     shift and go to state 52
    binary_expression              shift and go to state 13
    unary_expression               shift and go to state 14
    value                          shift and go to state 15
    unary_operator                 shift and go to state 26

state 13

    (13) expression -> binary_expression .

    SEMICOLON       reduce using rule 13 (expression -> binary_expression .)
    PLUS            reduce using rule 13 (expression -> binary_expression .)
    MINUS           reduce using rule 13 (expression -> binary_expression .)
    MULTIPLY        reduce using rule 13 (expression -> binary_expression .)
    DIVIDE          reduce using rule 13 (expression -> binary_expression .)
    AND             reduce using rule 13 (expression -> binary_expression .)
    OR              reduce using rule 13 (expression -> binary_expression .)
    EQUALS          reduce using rule 13 (expression -> binary_expression .)
    GREATER_THAN    reduce using rule 13 (expression -> binary_expression .)
    LESS_THAN       reduce using rule 13 (expression -> binary_expression .)
    GREATER_EQUAL   reduce using rule 13 (expression -> binary_expression .)
    LESS_EQUAL      reduce using rule 13 (expression -> binary_expression .)
    R_PARENTHESIS   reduce using rule 13 (expression -> binary_expression .)
    COMMA           reduce using rule 13 (expression -> binary_expression .)
    R_BRACKET       reduce using rule 13 (expression -> binary_expression .)


state 14

    (14) expression -> unary_expression .

    SEMICOLON       reduce using rule 14 (expression -> unary_expression .)
    PLUS            reduce using rule 14 (expression -> unary_expression .)
    MINUS           reduce using rule 14 (expression -> unary_expression .)
    MULTIPLY        reduce using rule 14 (expression -> unary_expression .)
    DIVIDE          reduce using rule 14 (expression -> unary_expression .)
    AND             reduce using rule 14 (expression -> unary_expression .)
    OR              reduce using rule 14 (expression -> unary_expression .)
    EQUALS          reduce using rule 14 (expression -> unary_expression .)
    GREATER_THAN    reduce using rule 14 (expression -> unary_expression .)
    LESS_THAN       reduce using rule 14 (expression -> unary_expression .)
    GREATER_EQUAL   reduce using rule 14 (expression -> unary_expression .)
    LESS_EQUAL      reduce using rule 14 (expression -> unary_expression .)
    R_PARENTHESIS   reduce using rule 14 (expression -> unary_expression .)
    COMMA           reduce using rule 14 (expression -> unary_expression .)
    R_BRACKET       reduce using rule 14 (expression -> unary_expression .)


state 15

    (15) expression -> value .

    SEMICOLON       reduce using rule 15 (expression -> value .)
    PLUS            reduce using rule 15 (expression -> value .)
    MINUS           reduce using rule 15 (expression -> value .)
    MULTIPLY        reduce using rule 15 (expression -> value .)
    DIVIDE          reduce using rule 15 (expression -> value .)
    AND             reduce using rule 15 (expression -> value .)
    OR              reduce using rule 15 (expression -> value .)
    EQUALS          reduce using rule 15 (expression -> value .)
    GREATER_THAN    reduce using rule 15 (expression -> value .)
    LESS_THAN       reduce using rule 15 (expression -> value .)
    GREATER_EQUAL   reduce using rule 15 (expression -> value .)
    LESS_EQUAL      reduce using rule 15 (expression -> value .)
    R_PARENTHESIS   reduce using rule 15 (expression -> value .)
    COMMA           reduce using rule 15 (expression -> value .)
    R_BRACKET       reduce using rule 15 (expression -> value .)


state 16

    (47) variable_declaration -> LET . ID recursive_variable_declaration
    (48) variable_declaration -> LET . ID TWO_POINTS ID recursive_variable_declaration
    (49) variable_declaration -> LET . ID TWO_POINTS type recursive_variable_declaration

    ID              shift and go to state 54


state 17

    (35) value -> ID .
    (37) value -> ID . L_PARENTHESIS argument_list R_PARENTHESIS
    (38) value -> ID . DOT ID recursive_atribute_access
    (39) value -> ID . L_SQ_BRACKET QUOTED_ID R_SQ_BRACKET recursive_atribute_access
    (55) basic_var_assignment -> ID . ASSIGN expression
    (58) object_var_assignment -> ID . ASSIGN object_body
    (43) atribute_access -> ID . recursive_atribute_access
    (44) recursive_atribute_access -> . DOT ID recursive_atribute_access
    (45) recursive_atribute_access -> . L_SQ_BRACKET QUOTED_ID R_SQ_BRACKET recursive_atribute_access
    (46) recursive_atribute_access -> . empty
    (1) empty -> .

  ! shift/reduce conflict for ASSIGN resolved as shift
    SEMICOLON       reduce using rule 35 (value -> ID .)
    PLUS            reduce using rule 35 (value -> ID .)
    MINUS           reduce using rule 35 (value -> ID .)
    MULTIPLY        reduce using rule 35 (value -> ID .)
    DIVIDE          reduce using rule 35 (value -> ID .)
    AND             reduce using rule 35 (value -> ID .)
    OR              reduce using rule 35 (value -> ID .)
    EQUALS          reduce using rule 35 (value -> ID .)
    GREATER_THAN    reduce using rule 35 (value -> ID .)
    LESS_THAN       reduce using rule 35 (value -> ID .)
    GREATER_EQUAL   reduce using rule 35 (value -> ID .)
    LESS_EQUAL      reduce using rule 35 (value -> ID .)
    L_PARENTHESIS   shift and go to state 55
    DOT             shift and go to state 56
    L_SQ_BRACKET    shift and go to state 58
    ASSIGN          shift and go to state 59

  ! ASSIGN          [ reduce using rule 1 (empty -> .) ]

    recursive_atribute_access      shift and go to state 57
    empty                          shift and go to state 60

state 18

    (53) variable_assignment -> basic_var_assignment .

    SEMICOLON       reduce using rule 53 (variable_assignment -> basic_var_assignment .)


state 19

    (54) variable_assignment -> object_var_assignment .

    SEMICOLON       reduce using rule 54 (variable_assignment -> object_var_assignment .)


state 20

    (72) type_declaration -> TYPE . ID ASSIGN type_body

    ID              shift and go to state 61


state 21

    (92) function_declaration -> function_header . function_body
    (94) function_body -> . L_BRACKET statement_list RETURN return_statement R_BRACKET

    L_BRACKET       shift and go to state 63

    function_body                  shift and go to state 62

state 22

    (104) if_statement -> IF . if_evaluation if_statements else_statement
    (105) if_evaluation -> . L_PARENTHESIS expression R_PARENTHESIS

    L_PARENTHESIS   shift and go to state 65

    if_evaluation                  shift and go to state 64

state 23

    (109) while_statement -> while_header . while_statements
    (111) while_statements -> . L_BRACKET statement statement_list R_BRACKET

    L_BRACKET       shift and go to state 67
